@startuml

abstract class Service{
-serviceCost:unsigned int
-serviceDuration:unsigned int
-serviceName:string
-serviceId:unsigned int
-requiredDoctorSize: unsigned int
-requiredDoctorSpec:vector<specialisation>
+<<virtual>>getInfo():string
+{abstract}~Service();
}

enum Specialisation
abstract class Statusable{}

Service <|-- Consultation
Service <|-- Rehabillitation
Service ..> Specialisation : używa >
Statusable <|--  Service

!ifndef UKRYJ_NOTATKI

note right of Service
Abstrakcyjna klasa reprezentująca usługę.
serviceCost - koszt usługi, wliczającą koszt pielęgniarek i
podstawową stawkę doktora (dla tytułu naukowego lekarz);
serviceDuration - czas (w minutach) trwania usługi;
serviceName - nazwa usługi;
serviceId - unikalny numer usługi;
requiredDoctorSize - wymagana liczba lekarzy;
requiredDoctorSpec - wymagane specjalności lekarza;
ServiceStatus - status usługi;
Abstrakcyjny destruktor zapewnia abstrakcyjność klasy.
end note

!endif
@enduml